@@ -9,10 +9,11 @@
 package org.sosy_lab.cpachecker.cfa;
 
 import static com.google.common.truth.Truth.assertThat;
+import static com.google.common.truth.Truth8.assertThat;
 
 import com.google.common.collect.ImmutableList;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 import org.junit.Before;
 import org.junit.Test;
@@ -22,7 +23,6 @@ import org.junit.runners.Parameterized.Parameter;
 import org.junit.runners.Parameterized.Parameters;
 import org.sosy_lab.common.ShutdownNotifier;
 import org.sosy_lab.common.configuration.Configuration;
-import org.sosy_lab.common.configuration.InvalidConfigurationException;
 import org.sosy_lab.common.log.LogManager;
 import org.sosy_lab.cpachecker.cfa.CParser.FileContentToParse;
 import org.sosy_lab.cpachecker.cfa.ast.FileLocation;
@@ -63,10 +63,10 @@ public class CParserLocationTest {
   @Test
   public void singleFileTest() throws CParserException, InterruptedException {
     String code = "void main() { }";
-    ParseResult result = parser.parseString(fileName, code);
+    ParseResult result = parser.parseString(Path.of(fileName), code);
     FileLocation mainLoc = result.getFunctions().get("main").getFileLocation();
 
-    assertThat(mainLoc.getFileName()).isEqualTo(expectedFileName);
+    assertThat(mainLoc.getFileName()).isEqualTo(Path.of(expectedFileName));
     assertThat(mainLoc.getNiceFileName()).isEmpty();
     assertThat(mainLoc.getStartingLineNumber()).isEqualTo(1);
     assertThat(mainLoc.getEndingLineNumber()).isEqualTo(1);
@@ -75,16 +75,15 @@ public class CParserLocationTest {
   }
 
   @Test
-  public void singleFileTest_lineDirectiveIgnored()
-      throws CParserException, InvalidConfigurationException, InterruptedException {
+  public void singleFileTest_lineDirectiveIgnored() throws Exception {
     parser =
         new CParserWithLocationMapper(
             Configuration.defaultConfiguration(), LogManager.createTestLogManager(), parser, false);
     String code = "#line 5 \"foo.c\"\nvoid main() { }";
-    ParseResult result = parser.parseString(fileName, code);
+    ParseResult result = parser.parseString(Path.of(fileName), code);
     FileLocation mainLoc = result.getFunctions().get("main").getFileLocation();
 
-    assertThat(mainLoc.getFileName()).isEqualTo(expectedFileName);
+    assertThat(mainLoc.getFileName()).isEqualTo(Path.of(expectedFileName));
     assertThat(mainLoc.getNiceFileName()).isEmpty();
     assertThat(mainLoc.getStartingLineNumber()).isEqualTo(2);
     assertThat(mainLoc.getEndingLineNumber()).isEqualTo(2);
@@ -93,16 +92,15 @@ public class CParserLocationTest {
   }
 
   @Test
-  public void singleFileTest_lineDirective()
-      throws CParserException, InvalidConfigurationException, InterruptedException {
+  public void singleFileTest_lineDirective() throws Exception {
     parser =
         new CParserWithLocationMapper(
             Configuration.defaultConfiguration(), LogManager.createTestLogManager(), parser, true);
     String code = "#line 5\nvoid main() { }";
-    ParseResult result = parser.parseString(fileName, code);
+    ParseResult result = parser.parseString(Path.of(fileName), code);
     FileLocation mainLoc = result.getFunctions().get("main").getFileLocation();
 
-    assertThat(mainLoc.getFileName()).isEqualTo(expectedFileName);
+    assertThat(mainLoc.getFileName()).isEqualTo(Path.of(expectedFileName));
     assertThat(mainLoc.getNiceFileName()).isEmpty();
     assertThat(mainLoc.getStartingLineNumber()).isEqualTo(2);
     assertThat(mainLoc.getEndingLineNumber()).isEqualTo(2);
@@ -111,16 +109,15 @@ public class CParserLocationTest {
   }
 
   @Test
-  public void singleFileTest_lineDirectiveWithFilename()
-      throws CParserException, InvalidConfigurationException, InterruptedException {
+  public void singleFileTest_lineDirectiveWithFilename() throws Exception {
     parser =
         new CParserWithLocationMapper(
             Configuration.defaultConfiguration(), LogManager.createTestLogManager(), parser, true);
     String code = "#line 5 \"foo.c\"\nvoid main() { }";
-    ParseResult result = parser.parseString(fileName, code);
+    ParseResult result = parser.parseString(Path.of(fileName), code);
     FileLocation mainLoc = result.getFunctions().get("main").getFileLocation();
 
-    assertThat(mainLoc.getFileName()).isEqualTo("foo.c");
+    assertThat(mainLoc.getFileName()).isEqualTo(Path.of("foo.c"));
     assertThat(mainLoc.getNiceFileName()).isEqualTo("foo.c");
     assertThat(mainLoc.getStartingLineNumber()).isEqualTo(2);
     assertThat(mainLoc.getEndingLineNumber()).isEqualTo(2);
@@ -132,28 +129,29 @@ public class CParserLocationTest {
   @SuppressFBWarnings("NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE")
   public void multiFileTest() throws CParserException, InterruptedException {
     String mainCode = "void main() { }";
-    FileContentToParse main = new FileContentToParse(fileName, mainCode);
+    FileContentToParse main = new FileContentToParse(Path.of(fileName), mainCode);
 
     String additionalCode = "void foo() { }";
     String additionalFileName = fileName.replace("test", "additional");
     String expectedAdditionalFileName = expectedFileName.replace("test", "additional");
-    FileContentToParse additional = new FileContentToParse(additionalFileName, additionalCode);
+    FileContentToParse additional =
+        new FileContentToParse(Path.of(additionalFileName), additionalCode);
     ParseResult result =
         parser.parseString(ImmutableList.of(main, additional), new CSourceOriginMapping());
 
     FileLocation mainLoc = result.getFunctions().get("main").getFileLocation();
-    assertThat(mainLoc.getFileName()).isEqualTo(expectedFileName);
+    assertThat(mainLoc.getFileName()).isEqualTo(Path.of(expectedFileName));
     assertThat(mainLoc.getNiceFileName())
-        .isEqualTo(Paths.get(expectedFileName).getFileName().toString());
+        .isEqualTo(Path.of(expectedFileName).getFileName().toString());
     assertThat(mainLoc.getStartingLineNumber()).isEqualTo(1);
     assertThat(mainLoc.getEndingLineNumber()).isEqualTo(1);
     assertThat(mainLoc.getStartingLineInOrigin()).isEqualTo(1);
     assertThat(mainLoc.getEndingLineInOrigin()).isEqualTo(1);
 
     FileLocation additionalLoc = result.getFunctions().get("foo").getFileLocation();
-    assertThat(additionalLoc.getFileName()).isEqualTo(expectedAdditionalFileName);
+    assertThat(additionalLoc.getFileName()).isEqualTo(Path.of(expectedAdditionalFileName));
     assertThat(additionalLoc.getNiceFileName())
-        .isEqualTo(Paths.get(expectedAdditionalFileName).getFileName().toString());
+        .isEqualTo(Path.of(expectedAdditionalFileName).getFileName().toString());
     assertThat(additionalLoc.getStartingLineNumber()).isEqualTo(1);
     assertThat(additionalLoc.getEndingLineNumber()).isEqualTo(1);
     assertThat(additionalLoc.getStartingLineInOrigin()).isEqualTo(1);
