@@ -14,7 +14,6 @@ import java.io.PrintStream;
 import java.io.Writer;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -71,7 +70,7 @@ public class UndefinedFunctionCollectorAlgorithm
 
   @Option(secure = true, description = "export undefined functions as C file")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path stubsFile = Paths.get("stubs.c");
+  private Path stubsFile = Path.of("stubs.c");
 
   @Option(secure = true, description = "Set of functions that should be ignored")
   private Set<String> allowedFunctions =
@@ -134,9 +133,7 @@ public class UndefinedFunctionCollectorAlgorithm
   public AlgorithmStatus run(ReachedSet pReachedSet) throws InterruptedException {
     collectUndefinedFunctions();
 
-    // clear reached set and therefore waitlist to prevent further warnings:
-    pReachedSet.clear();
-    return AlgorithmStatus.SOUND_AND_PRECISE;
+    return AlgorithmStatus.NO_PROPERTY_CHECKED;
   }
 
   private void collectUndefinedFunctions() throws InterruptedException {
@@ -183,8 +180,7 @@ public class UndefinedFunctionCollectorAlgorithm
     pOut.println("Total undeclared functions called:        " + undeclaredFunctions.size());
     pOut.println(
         "Non-standard undeclared functions called: "
-            + undeclaredFunctions
-                .stream()
+            + undeclaredFunctions.stream()
                 .filter(name -> !allowedUndeclaredFunctionsRegexp.matcher(name).matches())
                 .count());
   }
@@ -236,24 +232,24 @@ public class UndefinedFunctionCollectorAlgorithm
   }
 
   private String getSignature(String name, IAFunctionType type) {
-    String res = name + "(";
+    StringBuilder res = new StringBuilder().append(name).append("(");
     int i = 0;
     for (Type pt : type.getParameters()) {
       if (i == 0) {
-        res += pt.toASTString("arg" + i);
+        res.append(pt.toASTString("arg" + i));
       } else {
-        res += ", " + pt.toASTString("arg" + i);
+        res.append(", ").append(pt.toASTString("arg" + i));
       }
       i++;
     }
     if (type.takesVarArgs()) {
       if (i != 0) {
-        res += ", ";
+        res.append(", ");
       }
-      res += "...";
+      res.append("...");
     }
-    res += ")";
-    return type.getReturnType().toASTString(res);
+    res.append(")");
+    return type.getReturnType().toASTString(res.toString());
   }
 
   private boolean printType(String indent, StringBuilder prepend, StringBuilder buf, CType rt) {
@@ -281,15 +277,7 @@ public class UndefinedFunctionCollectorAlgorithm
       buf.append(indent + "// Composite type\n");
       prepend.append(odmFunctionDecl);
       // We can not use rt.toASTString(), as it produces full definition with all fields
-      buf.append(
-          indent
-              + rt.toString()
-              + " *tmp"
-              + " = ("
-              + rt.toString()
-              + "*)"
-              + externAllocFunction
-              + "();\n");
+      buf.append(indent + rt + " *tmp" + " = (" + rt + "*)" + externAllocFunction + "();\n");
       prepend.append(ASSUME_FUNCTION_DECL);
       buf.append(indent + ASSUME_FUNCTION_NAME + "(tmp != 0);\n");
       buf.append(indent + "return *tmp;\n");
