@@ -14,7 +14,6 @@ import static com.google.common.collect.FluentIterable.from;
 
 import com.google.common.base.Preconditions;
 import com.google.common.base.Predicates;
-import com.google.common.base.Strings;
 import com.google.common.collect.HashMultimap;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Iterables;
@@ -27,7 +26,6 @@ import java.io.PrintStream;
 import java.io.Writer;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
@@ -51,7 +49,6 @@ import org.sosy_lab.common.log.LogManager;
 import org.sosy_lab.common.time.TimeSpan;
 import org.sosy_lab.common.time.Timer;
 import org.sosy_lab.cpachecker.cfa.CFA;
-import org.sosy_lab.cpachecker.cfa.ast.c.CFunctionDeclaration;
 import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.core.CPAcheckerResult.Result;
 import org.sosy_lab.cpachecker.core.CoreComponentsFactory;
@@ -113,10 +110,9 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
     private void printIntermediateStatistics(
         PrintStream pOut, Result pResult, ReachedSet pReached) {
 
-      String text =
-          "Statistics for " + noOfRuns + ". execution of composition algorithm";
+      String text = "Statistics for " + noOfRuns + ". execution of composition algorithm";
       pOut.println(text);
-      pOut.println(Strings.repeat("=", text.length()));
+      pOut.println("=".repeat(text.length()));
 
       printSubStatistics(pOut, pResult, pReached);
       pOut.println();
@@ -135,15 +131,11 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
     private void printSubStatistics(
         PrintStream pOut, Result pResult, UnmodifiableReachedSet pReached) {
       pOut.println();
-      pOut.println(
-          "Statistics for the component analysis in run "
-              + noOfRuns
-              + " of "
-              + getName());
+      pOut.println("Statistics for the component analysis in run " + noOfRuns + " of " + getName());
 
-         for (Statistics s : currentSubStat) {
-          StatisticsUtils.printStatistics(s, pOut, logger, pResult, pReached);
-        }
+      for (Statistics s : currentSubStat) {
+        StatisticsUtils.printStatistics(s, pOut, logger, pResult, pReached);
+      }
     }
 
     @Override
@@ -163,65 +155,61 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
   }
 
   @Option(
-    secure = true,
-    required = true,
-    description =
-        "list of files with configurations to use, which are optionally suffixed "
-            + "according to one of the followig schemes:"
-            + "either ::MODE or ::MODE_LIMIT, where MODE and LIMIT are place holders."
-            + "MODE may take one of the following values continue (i.e., continue analysis with same CPA and reached set), "
-            + "reuse-precision (i.e., reuse the aggregation of the precisions from the previous analysis run), "
-            + "noreuse (i.e., start from scratch)."
-            + "LIMIT is a positive integer number specifying the time limit of the analysis in each round."
-            + "If no (correct) limit is given a default limit is used."
-  )
+      secure = true,
+      required = true,
+      description =
+          "list of files with configurations to use, which are optionally suffixed according to one"
+              + " of the followig schemes:either ::MODE or ::MODE_LIMIT, where MODE and LIMIT are"
+              + " place holders.MODE may take one of the following values continue (i.e., continue"
+              + " analysis with same CPA and reached set), reuse-precision (i.e., reuse the"
+              + " aggregation of the precisions from the previous analysis run), noreuse (i.e.,"
+              + " start from scratch).LIMIT is a positive integer number specifying the time limit"
+              + " of the analysis in each round.If no (correct) limit is given a default limit is"
+              + " used.")
   @FileOption(FileOption.Type.OPTIONAL_INPUT_FILE)
   private List<AnnotatedValue<Path>> configFiles;
 
   public enum INTERMEDIATESTATSOPT {
-    EXECUTE, NONE, PRINT
+    EXECUTE,
+    NONE,
+    PRINT
   }
 
   @Option(
-    secure = true,
-    description =
-    "print the statistics of each component of the composition algorithm"
-            + " directly after the component's computation is finished"
-  )
-  private  INTERMEDIATESTATSOPT intermediateStatistics = INTERMEDIATESTATSOPT.NONE;
+      secure = true,
+      description =
+          "print the statistics of each component of the composition algorithm"
+              + " directly after the component's computation is finished")
+  private INTERMEDIATESTATSOPT intermediateStatistics = INTERMEDIATESTATSOPT.NONE;
 
   @Option(
-    secure = true,
-    description =
-    "let each analysis part of the composition algorithm write output files"
-            + " and not only the last one that is executed"
-  )
+      secure = true,
+      description =
+          "let each analysis part of the composition algorithm write output files"
+              + " and not only the last one that is executed")
   private boolean writeIntermediateOutputFiles = true;
 
   @Option(
-    secure = true,
-    name = "initCondition",
-    description =
-        "Whether or not to create an initial condition, that excludes no paths, "
-            + "before first analysis is run."
-            + "Required when first analysis uses condition from conditional model checking"
-  )
+      secure = true,
+      name = "initCondition",
+      description =
+          "Whether or not to create an initial condition, that excludes no paths, "
+              + "before first analysis is run."
+              + "Required when first analysis uses condition from conditional model checking")
   private boolean generateInitialFalseCondition = false;
 
   @Option(
-    secure = true,
-    name = "propertyChecked",
-    description = "Enable when composition algorithm is used to check a specification"
-  )
+      secure = true,
+      name = "propertyChecked",
+      description = "Enable when composition algorithm is used to check a specification")
   private boolean isPropertyChecked = true;
 
   @Option(
-    secure = true,
-    name = "condition.file",
-    description = "where to store initial condition, when generated"
-  )
+      secure = true,
+      name = "condition.file",
+      description = "where to store initial condition, when generated")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path initialCondition = Paths.get("AssumptionAutomaton.txt");
+  private Path initialCondition = Path.of("AssumptionAutomaton.txt");
 
   private AlgorithmCompositionStrategy selectionStrategy; // TODO initialize, set up
 
@@ -254,15 +242,15 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
     stats = new CompositionAlgorithmStatistics();
 
     selectionStrategy =
-        AlgorithmCompositionStrategyBuilder
-            .buildStrategy(pConfig, logger, shutdownNotifier, cfa, specification);
+        AlgorithmCompositionStrategyBuilder.buildStrategy(
+            pConfig, logger, shutdownNotifier, cfa, specification);
 
     logShutdownListener =
         reason ->
             logger.logf(
                 Level.WARNING,
-            "Shutdown of analysis run %d requested (%s).",
-            stats.noOfRuns,
+                "Shutdown of analysis run %d requested (%s).",
+                stats.noOfRuns,
                 reason);
     if (generateInitialFalseCondition) {
       generateInitialFalseCondition();
@@ -290,7 +278,8 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
         "CompositionAlgorithm needs ForwardingReachedSet");
     checkArgument(
         pReached.size() <= 1,
-        "CompositionAlgorithm does not support being called several times with the same reached set");
+        "CompositionAlgorithm does not support being called several times with the same reached"
+            + " set");
     checkArgument(!pReached.isEmpty(), "CompositionAlgorithm needs non-empty reached set");
 
     stats.totalTimer.start();
@@ -336,18 +325,17 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
 
           // if configuration is still null, skip it in this iteration
           if (currentConfig == null) {
-            logger
-                .log(Level.WARNING, "Skip current analysis because no configuration is available.");
+            logger.log(
+                Level.WARNING, "Skip current analysis because no configuration is available.");
             continue;
           }
 
-            currentRun = createNextAlgorithm(currentContext, mainFunction, previousContext);
+          currentRun = createNextAlgorithm(currentContext, mainFunction, previousContext);
           if (currentRun == null) {
-            logger
-                .log(Level.WARNING, "Skip current analysis because analysis could not be set up.");
+            logger.log(
+                Level.WARNING, "Skip current analysis because analysis could not be set up.");
             continue;
           }
-
 
           if (fReached instanceof HistoryForwardingReachedSet) {
             ((HistoryForwardingReachedSet) fReached).saveCPA(currentContext.getCPA());
@@ -365,7 +353,8 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
           if (status.wasPropertyChecked() != isPropertyChecked) {
             logger.logf(
                 Level.WARNING,
-                "Component algorithm and composition algorithm do not agree on property checking (%b, %b).",
+                "Component algorithm and composition algorithm do not agree on property checking"
+                    + " (%b, %b).",
                 status.wasPropertyChecked(),
                 isPropertyChecked);
           }
@@ -385,7 +374,8 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
           } else if (currentContext.getReachedSet().hasWaitingState()) {
             logger.logf(
                 Level.FINE,
-                "Analysis %s in run %d terminated but did not finish: There are still states to be processed.",
+                "Analysis %s in run %d terminated but did not finish: There are still states to be"
+                    + " processed.",
                 currentContext.configToString(),
                 stats.noOfRuns);
 
@@ -481,17 +471,13 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
     switch (intermediateStatistics) {
       case PRINT:
         stats.printIntermediateStatistics(
-            System.out,
-            Result.UNKNOWN,
-            currentContext.getReachedSet());
+            System.out, Result.UNKNOWN, currentContext.getReachedSet());
         break;
       case EXECUTE:
         @SuppressWarnings("checkstyle:IllegalInstantiation") // ok for statistics
         final PrintStream dummyStream = new PrintStream(ByteStreams.nullOutputStream());
         stats.printIntermediateStatistics(
-            dummyStream,
-            Result.UNKNOWN,
-            currentContext.getReachedSet());
+            dummyStream, Result.UNKNOWN, currentContext.getReachedSet());
         break;
       default: // do nothing
     }
@@ -503,11 +489,9 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
     stats.resetSubStatistics();
   }
 
-
   private void tidyUpShutdownManager(ShutdownManager pShutdownManager) {
     pShutdownManager.getNotifier().unregister(logShutdownListener);
     pShutdownManager.requestShutdown("Analysis terminated.");
-
   }
 
   private @Nullable Pair<Algorithm, ShutdownManager> createNextAlgorithm(
@@ -532,7 +516,7 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
 
     ConfigurableProgramAnalysis cpa = null;
     try {
-      AggregatedReachedSets aggregateReached = new AggregatedReachedSets();
+      AggregatedReachedSets aggregateReached = AggregatedReachedSets.empty();
       CoreComponentsFactory localCoreComponents =
           new CoreComponentsFactory(
               pCurrentContext.getConfig(),
@@ -548,10 +532,7 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
           // create cpa only once when not initialized, use global limits (i.e. shutdownNotifier)
           CoreComponentsFactory globalCoreComponents =
               new CoreComponentsFactory(
-                  pCurrentContext.getConfig(),
-                  logger,
-                  shutdownNotifier,
-                  aggregateReached);
+                  pCurrentContext.getConfig(), logger, shutdownNotifier, aggregateReached);
           cpa = globalCoreComponents.createCPA(cfa, specification);
           pCurrentContext.setCPA(cpa);
           if (!pCurrentContext.reusePrecision()) {
@@ -612,8 +593,7 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
       }
 
       // always create algorithm with new "local" shutdown manager
-      Algorithm algorithm =
-          localCoreComponents.createAlgorithm(cpa, cfa, specification);
+      Algorithm algorithm = localCoreComponents.createAlgorithm(cpa, cfa, specification);
 
       if (algorithm instanceof CompositionAlgorithm) {
         // To avoid accidental infinitely-recursive nesting.
@@ -668,7 +648,7 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
           aggregatePrecisionsForReuse(previousReachedSets, initialPrecision, pFMgr, pConfig);
     }
 
-    ReachedSet reached = pFactory.createReachedSet();
+    ReachedSet reached = pFactory.createReachedSet(pCpa);
     reached.add(initialState, initialPrecision);
     return reached;
   }
@@ -730,25 +710,26 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
 
           constrPrec = new RefinableConstraintsPrecision(pConfig);
         }
-      ConstraintsPrecision constrPrecInter;
+        ConstraintsPrecision constrPrecInter;
         boolean changed = false;
 
-      for (ReachedSet previousReached : pPreviousReachedSets) {
-        if (previousReached != null) {
-          for (Precision prec : previousReached.getPrecisions()) {
-            constrPrecInter = Precisions.extractPrecisionByType(prec, ConstraintsPrecision.class);
-            if (constrPrecInter != null && !(constrPrecInter instanceof FullConstraintsPrecision)) {
-              constrPrec = constrPrec.join(constrPrecInter);
+        for (ReachedSet previousReached : pPreviousReachedSets) {
+          if (previousReached != null) {
+            for (Precision prec : previousReached.getPrecisions()) {
+              constrPrecInter = Precisions.extractPrecisionByType(prec, ConstraintsPrecision.class);
+              if (constrPrecInter != null
+                  && !(constrPrecInter instanceof FullConstraintsPrecision)) {
+                constrPrec = constrPrec.join(constrPrecInter);
                 changed = true;
+              }
             }
           }
         }
-      }
         if (changed) {
-        resultPrec =
-            Precisions.replaceByType(
-                resultPrec, constrPrec, Predicates.instanceOf(ConstraintsPrecision.class));
-      }
+          resultPrec =
+              Precisions.replaceByType(
+                  resultPrec, constrPrec, Predicates.instanceOf(ConstraintsPrecision.class));
+        }
       } catch (InvalidConfigurationException e) {
         logger.logException(Level.INFO, e, "Reuse of precision failed. Continue without reuse");
       }
@@ -787,18 +768,16 @@ public class CompositionAlgorithm implements Algorithm, StatisticsProvider {
     predicates.addAll(pPredPrec.getLocalPredicates().values());
 
     SetMultimap<CFANode, MemoryLocation> trackedVariables = HashMultimap.create();
-    CFANode dummyNode = new CFANode(CFunctionDeclaration.DUMMY);
+    CFANode dummyNode = CFANode.newDummyCFANode();
 
     for (AbstractionPredicate pred : predicates) {
-      for (String var : pFMgr.extractVariables(pred.getSymbolicVariable()).keySet()) {
-          trackedVariables.put(dummyNode, MemoryLocation.valueOf(var));
+      for (String var : pFMgr.extractVariables(pred.getSymbolicAtom()).keySet()) {
+        trackedVariables.put(dummyNode, MemoryLocation.parseExtendedQualifiedName(var));
       }
     }
 
     return trackedVariables;
   }
-
-
 
   @Override
   public void collectStatistics(Collection<Statistics> pStatsCollection) {
