@@ -14,7 +14,6 @@ import com.google.common.collect.ImmutableMap;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 import java.util.logging.Level;
 import org.junit.Test;
@@ -39,7 +38,7 @@ public class AutomatonTest {
             "specification", "test/config/automata/tmpSpecification.spc",
             "analysis.stopAfterError", "FALSE");
 
-    Path tmpSpc = Paths.get("test/config/automata/tmpSpecification.spc");
+    Path tmpSpc = Path.of("test/config/automata/tmpSpecification.spc");
     String content =
         "#include UninitializedVariablesTestAutomaton.txt \n" + "#include tmpSpecification.spc \n";
     IO.writeFile(tmpSpc, StandardCharsets.US_ASCII, content);
@@ -128,7 +127,8 @@ public class AutomatonTest {
     Map<String, String> prop =
         ImmutableMap.of(
             "CompositeCPA.cpas",
-                "cpa.location.LocationCPA, cpa.value.ValueAnalysisCPA, cpa.automaton.ControlAutomatonCPA",
+                "cpa.location.LocationCPA, cpa.value.ValueAnalysisCPA,"
+                    + " cpa.automaton.ControlAutomatonCPA",
             "log.consoleLevel", "INFO",
             "cpa.value.threshold", "10");
 
@@ -143,7 +143,8 @@ public class AutomatonTest {
     Map<String, String> prop =
         ImmutableMap.of(
             "CompositeCPA.cpas",
-                "cpa.location.LocationCPA, cpa.value.ValueAnalysisCPA, cpa.automaton.ControlAutomatonCPA",
+                "cpa.location.LocationCPA, cpa.value.ValueAnalysisCPA,"
+                    + " cpa.automaton.ControlAutomatonCPA",
             "cpa.automaton.inputFile", "test/config/automata/modifyingAutomaton.txt",
             "cpa.value.threshold", "10");
 
@@ -158,7 +159,8 @@ public class AutomatonTest {
     Map<String, String> prop =
         ImmutableMap.of(
             "CompositeCPA.cpas",
-                "cpa.location.LocationCPA, cpa.value.ValueAnalysisCPA, cpa.automaton.ObserverAutomatonCPA",
+                "cpa.location.LocationCPA, cpa.value.ValueAnalysisCPA,"
+                    + " cpa.automaton.ObserverAutomatonCPA",
             "cpa.automaton.inputFile", "test/config/automata/modifyingAutomaton.txt",
             "cpa.value.threshold", "10");
 
@@ -187,11 +189,14 @@ public class AutomatonTest {
     Map<String, String> prop =
         ImmutableMap.of(
             "CompositeCPA.cpas",
-                "cpa.location.LocationCPA, cpa.automaton.ObserverAutomatonCPA, cpa.uninitvars.UninitializedVariablesCPA",
+            "cpa.location.LocationCPA, cpa.automaton.ObserverAutomatonCPA,"
+                + " cpa.uninitvars.UninitializedVariablesCPA",
             "cpa.automaton.inputFile",
-                "test/config/automata/UninitializedVariablesTestAutomaton.txt",
-            "cpa.automaton.dotExportFile", OUTPUT_FILE,
-            "analysis.stopAfterError", "FALSE");
+            "test/config/automata/UninitializedVariablesTestAutomaton.txt",
+            "cpa.automaton.dotExportFile",
+            OUTPUT_FILE,
+            "analysis.stopAfterError",
+            "FALSE");
 
     TestResults results = CPATestRunner.run(prop, "test/programs/simple/UninitVarsErrors.c");
     assertThat(results.getLog()).contains("Automaton: Uninitialized return value");
@@ -226,7 +231,9 @@ public class AutomatonTest {
     Map<String, String> prop =
         ImmutableMap.of(
             "CompositeCPA.cpas",
-            "cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.predicate.PredicateCPA, cpa.automaton.ObserverAutomatonCPA",
+            "cpa.location.LocationCPA, cpa.callstack.CallstackCPA,"
+                + " cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA,"
+                + " cpa.predicate.PredicateCPA, cpa.automaton.ObserverAutomatonCPA",
             "cpa.automaton.inputFile",
             "test/config/automata/set_variable.spc",
             "cpa.automaton.dotExportFile",
@@ -241,7 +248,9 @@ public class AutomatonTest {
     Map<String, String> prop =
         ImmutableMap.of(
             "CompositeCPA.cpas",
-            "cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA, cpa.predicate.PredicateCPA, cpa.automaton.ObserverAutomatonCPA",
+            "cpa.location.LocationCPA, cpa.callstack.CallstackCPA,"
+                + " cpa.functionpointer.FunctionPointerCPA, cpa.value.ValueAnalysisCPA,"
+                + " cpa.predicate.PredicateCPA, cpa.automaton.ObserverAutomatonCPA",
             "cpa.automaton.inputFile",
             "test/config/automata/set_variable.spc",
             "cpa.automaton.dotExportFile",
@@ -256,7 +265,8 @@ public class AutomatonTest {
     Map<String, String> prop =
         ImmutableMap.of(
             "CompositeCPA.cpas",
-                "cpa.location.LocationCPA, cpa.automaton.ObserverAutomatonCPA, cpa.value.ValueAnalysisCPA",
+                "cpa.location.LocationCPA, cpa.automaton.ObserverAutomatonCPA,"
+                    + " cpa.value.ValueAnalysisCPA",
             "cpa.automaton.inputFile",
                 "test/config/automata/ExplicitAnalysisObservingAutomaton.txt",
             "cpa.value.threshold", "2000");
@@ -289,7 +299,8 @@ public class AutomatonTest {
     Map<String, String> prop =
         ImmutableMap.of(
             "CompositeCPA.cpas",
-                "cpa.location.LocationCPA, cpa.automaton.ObserverAutomatonCPA automatonA, cpa.automaton.ObserverAutomatonCPA automatonB, cpa.value.ValueAnalysisCPA",
+                "cpa.location.LocationCPA, cpa.automaton.ObserverAutomatonCPA automatonA,"
+                    + " cpa.automaton.ObserverAutomatonCPA automatonB, cpa.value.ValueAnalysisCPA",
             "automatonA.cpa.automaton.inputFile", "test/config/automata/InteractionAutomatonA.txt",
             "automatonB.cpa.automaton.inputFile", "test/config/automata/InteractionAutomatonB.txt",
             "cpa.value.threshold", "2000");
