@@ -15,7 +15,6 @@ import java.io.IOException;
 import java.lang.reflect.Field;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.concurrent.atomic.AtomicInteger;
 import org.junit.Test;
@@ -70,7 +69,6 @@ public class ARGToAutomatonConverterTest extends AbstractTranslationTest {
             .setOption("cpa.arg.export.code.header", "false");
     config = configBuilder.build();
 
-
     converter = new ARGToAutomatonConverter(config, MachineModel.LINUX32, logger);
   }
 
@@ -99,11 +97,11 @@ public class ARGToAutomatonConverterTest extends AbstractTranslationTest {
 
   @Test
   public void test() throws Exception {
-    Path fullPath = Paths.get(TEST_DIR_PATH, program);
+    Path fullPath = Path.of(TEST_DIR_PATH, program);
 
     // generate ARG:
     resetCFANodeCounter();
-    ARGState root = run(config,fullPath);
+    ARGState root = run(config, fullPath);
 
     // generate joint automaton
     Automaton aut = converter.getAutomaton(root, true);
@@ -122,7 +120,7 @@ public class ARGToAutomatonConverterTest extends AbstractTranslationTest {
               .build();
       TestResults results = null;
       try {
-      resetCFANodeCounter();
+        resetCFANodeCounter();
         results = CPATestRunner.run(reConfig, fullPath.toString());
       } catch (NoClassDefFoundError | UnsatisfiedLinkError e) {
         throw new AssertionError(e);
@@ -194,5 +192,4 @@ public class ARGToAutomatonConverterTest extends AbstractTranslationTest {
     nextId.setAccessible(false);
     idGenerator.setAccessible(false);
   }
-
 }
