@@ -16,7 +16,6 @@ import java.io.PrintStream;
 import java.io.Writer;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayDeque;
 import java.util.Collections;
 import java.util.Deque;
@@ -48,22 +47,20 @@ class BAMReachedSetExporter implements Statistics {
 
   @Option(secure = true, description = "export blocked ARG as .dot file")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path argFile = Paths.get("BlockedARG.dot");
+  private Path argFile = Path.of("BlockedARG.dot");
 
   @Option(
-    secure = true,
-    description = "export single blocked ARG as .dot files, should contain '%d'"
-  )
+      secure = true,
+      description = "export single blocked ARG as .dot files, should contain '%d'")
   @FileOption(FileOption.Type.OUTPUT_FILE)
   private PathTemplate indexedArgFile = PathTemplate.ofFormatString("ARGs/ARG_%d.dot");
 
   @Option(secure = true, description = "export used parts of blocked ARG as .dot file")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path simplifiedArgFile = Paths.get("BlockedARGSimplified.dot");
+  private Path simplifiedArgFile = Path.of("BlockedARGSimplified.dot");
 
   private final LogManager logger;
   private final AbstractBAMCPA bamcpa;
-
 
   BAMReachedSetExporter(Configuration pConfig, LogManager pLogger, AbstractBAMCPA pCpa)
       throws InvalidConfigurationException {
