@@ -9,6 +9,7 @@
 package org.sosy_lab.cpachecker.cpa.predicate;
 
 import static com.google.common.base.Preconditions.checkArgument;
+import static com.google.common.collect.FluentIterable.from;
 import static org.sosy_lab.cpachecker.cpa.predicate.PredicateAbstractState.getPredicateState;
 
 import com.google.common.collect.FluentIterable;
@@ -29,7 +30,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 import org.sosy_lab.common.collect.PersistentLinkedList;
 import org.sosy_lab.common.collect.PersistentList;
 import org.sosy_lab.cpachecker.cfa.ast.c.CExpression;
@@ -60,9 +60,8 @@ import org.sosy_lab.cpachecker.util.predicates.smt.Solver;
 import org.sosy_lab.java_smt.api.BooleanFormula;
 
 /**
- * Utility class for Slicing Abstractions like in the papers:
- * "Slicing Abstractions" (doi:10.1007/978-3-540-75698-9_2)
- * "Splitting via Interpolants" (doi:10.1007/978-3-642-27940-9_13)
+ * Utility class for Slicing Abstractions like in the papers: "Slicing Abstractions"
+ * (doi:10.1007/978-3-540-75698-9_2) "Splitting via Interpolants" (doi:10.1007/978-3-642-27940-9_13)
  */
 public class SlicingAbstractionsUtils {
 
@@ -83,13 +82,14 @@ public class SlicingAbstractionsUtils {
     final Map<ARGState, PersistentList<ARGState>> result = new TreeMap<>();
     final List<ARGState> startAbstractionStates = calculateStartStates(originState);
 
-    // This looks a bit expensive, but we cannot simply write this method like calculateOutgoingSegments!
+    // This looks a bit expensive, but we cannot simply write this method like
+    // calculateOutgoingSegments!
     // Because of the way we build our ARG, we can be sure that a block has only one starting
     // abstraction state, but there could be several abstraction states to end at.
     for (ARGState s : startAbstractionStates) {
       Map<ARGState, PersistentList<ARGState>> outgoing = calculateOutgoingSegments(s);
       if (outgoing.containsKey(originState)) {
-         result.put(s,outgoing.get(originState));
+        result.put(s, outgoing.get(originState));
       }
     }
 
@@ -97,10 +97,11 @@ public class SlicingAbstractionsUtils {
   }
 
   /**
-   * This method can be seen as a generalized way of calculating the parent
-   * abstraction states of a given abstraction state.
-   * @param originState The (abstraction) state for which to calculate the
-   *        effective parent (abstraction) states
+   * This method can be seen as a generalized way of calculating the parent abstraction states of a
+   * given abstraction state.
+   *
+   * @param originState The (abstraction) state for which to calculate the effective parent
+   *     (abstraction) states
    * @return A list of (abstraction) states from which originState can be reached
    */
   public static List<ARGState> calculateStartStates(ARGState originState) {
@@ -109,7 +110,7 @@ public class SlicingAbstractionsUtils {
     final Deque<ARGState> waitlist = new ArrayDeque<>();
     final Set<ARGState> reached = new HashSet<>();
 
-    for (ARGState parent: originState.getParents()) {
+    for (ARGState parent : originState.getParents()) {
 
       if (isAbstractionState(parent)) {
         result.add(parent);
@@ -148,7 +149,7 @@ public class SlicingAbstractionsUtils {
    */
   public static ImmutableMap<ARGState, PersistentList<ARGState>> calculateOutgoingSegments(
       ARGState originState) {
-    checkArgument(isAbstractionState(originState));
+    // checkArgument(isAbstractionState(originState));
 
     // Used data structures:
     final Collection<ARGState> outgoingStates = originState.getChildren();
@@ -159,10 +160,10 @@ public class SlicingAbstractionsUtils {
 
     // prepare initial state
     frontier.put(originState, PersistentLinkedList.of());
-    for (ARGState startState: outgoingStates) {
+    for (ARGState startState : outgoingStates) {
       // we need to treat AbstractionStates differently!
       if (!isAbstractionState(startState)) {
-          waitlist.add(startState);
+        waitlist.add(startState);
       } else {
         segmentMap.put(startState, PersistentLinkedList.of());
       }
@@ -263,7 +264,7 @@ public class SlicingAbstractionsUtils {
     return getPredicateState(pState).isAbstractionState() || !pState.wasExpanded();
   }
 
-  public static enum AbstractionPosition {
+  public enum AbstractionPosition {
     START,
     END;
 
@@ -299,18 +300,19 @@ public class SlicingAbstractionsUtils {
       PathFormulaManager pPfmgr,
       ImmutableSet<AbstractionPosition> withInvariants)
       throws CPATransferException, InterruptedException {
-    List<ARGState> segmentList = SlicingAbstractionsUtils.calculateOutgoingSegments(start).get(stop);
+    List<ARGState> segmentList =
+        SlicingAbstractionsUtils.calculateOutgoingSegments(start).get(stop);
     if (segmentList == null) {
       segmentList = ImmutableList.of();
     }
-    return buildPathFormula(start, stop, segmentList, pSSAMap, pPts, pFmgr, pPfmgr, withInvariants);
+    return buildPathFormula(start, stop, segmentList, pSSAMap, pPts, pPfmgr, withInvariants);
   }
 
   /**
    * For better scaling, call this method instead of {@link
    * SlicingAbstractionsUtils#buildPathFormula(ARGState, ARGState, List, SSAMap, PointerTargetSet,
-   * FormulaManagerView, PathFormulaManager, ImmutableSet)} if you already have calculated the
-   * segmentList (states between start and stop state).
+   * PathFormulaManager, ImmutableSet)} if you already have calculated the segmentList (states
+   * between start and stop state).
    */
   public static PathFormula buildPathFormula(
       ARGState start,
@@ -318,7 +320,6 @@ public class SlicingAbstractionsUtils {
       List<ARGState> segmentList,
       SSAMap pSSAMap,
       PointerTargetSet pPts,
-      FormulaManagerView pFmgr,
       PathFormulaManager pPfmgr,
       ImmutableSet<AbstractionPosition> withInvariants)
       throws CPATransferException, InterruptedException {
@@ -330,16 +331,15 @@ public class SlicingAbstractionsUtils {
     // start with either an empty PathFormula or the abstraction state of start
     // (depending on what the caller specified)
     if (withInvariants.contains(AbstractionPosition.START)) {
-      startFormula = invariantPathFormulaFromState(start, pSSAMap, pPts, pFmgr);
+      startFormula = invariantPathFormulaFromState(start, pSSAMap, pPts, pPfmgr);
     } else {
-      startFormula =
-          emptyPathFormulaWithSSAMap(pFmgr.getBooleanFormulaManager().makeTrue(), pSSAMap, pPts);
+      startFormula = pPfmgr.makeEmptyPathFormulaWithContext(pSSAMap, pPts);
     }
 
     // Add assumptions if any:
     AbstractStateWithAssumptions other =
         AbstractStates.extractStateByType(stop, AbstractStateWithAssumptions.class);
-    if (other != null) {
+    if (other != null && !(other instanceof DCAState)) {
       if (stop.isTarget() && other instanceof OverflowState) {
         other = ((OverflowState) other).getParent();
       }
@@ -351,11 +351,12 @@ public class SlicingAbstractionsUtils {
     // generate the PathFormula for the path between start and stop
     // using the relevant non-abstraction states
     pfb = buildFormulaBuilder(start, stop, segmentList, pPfmgr);
-    PathFormula p = pfb.build(pPfmgr,startFormula);
+    PathFormula p = pfb.build(pPfmgr, startFormula);
 
     // add the abstraction formula of abstraction state if the caller wants this:
     if (withInvariants.contains(AbstractionPosition.END)) {
-      BooleanFormula endInvariant = PredicateAbstractState.getPredicateState(stop).getAbstractionFormula().asFormula();
+      BooleanFormula endInvariant =
+          PredicateAbstractState.getPredicateState(stop).getAbstractionFormula().asFormula();
       pathFormula = pPfmgr.makeAnd(p, endInvariant);
     } else {
       pathFormula = p;
@@ -390,8 +391,8 @@ public class SlicingAbstractionsUtils {
             }
             DCAState dcaState = AbstractStates.extractStateByType(currentState, DCAState.class);
             if (dcaState != null) {
-              for (CExpression assumption : FluentIterable.from(dcaState.getAssumptions())
-                  .filter(CExpression.class)) {
+              for (CExpression assumption :
+                  FluentIterable.from(dcaState.getAssumptions()).filter(CExpression.class)) {
                 currentBuilder = currentBuilder.makeAnd(assumption);
               }
             }
@@ -415,22 +416,16 @@ public class SlicingAbstractionsUtils {
       if (currentBuilder == null) {
         currentBuilder = pPfmgr.createNewPathFormulaBuilder();
       }
-      finishedBuilders.put(currentState,currentBuilder);
+      finishedBuilders.put(currentState, currentBuilder);
     }
 
     return finishedBuilders.get(stop);
   }
 
   private static PathFormula invariantPathFormulaFromState(
-      ARGState state, SSAMap pSSAMap, PointerTargetSet pPts, FormulaManagerView fmgr) {
+      ARGState state, SSAMap pSSAMap, PointerTargetSet pPts, PathFormulaManager pfmgr) {
     BooleanFormula initFormula = getPredicateState(state).getAbstractionFormula().asFormula();
-    BooleanFormula instatiatedInitFormula = fmgr.instantiate(initFormula, pSSAMap);
-    return emptyPathFormulaWithSSAMap(instatiatedInitFormula, pSSAMap, pPts);
-  }
-
-  private static PathFormula emptyPathFormulaWithSSAMap(BooleanFormula formula, SSAMap pSSAMap, PointerTargetSet pPts) {
-    PathFormula resultPathFormula = new PathFormula(formula, pSSAMap, pPts, 0);
-    return resultPathFormula;
+    return pfmgr.makeAnd(pfmgr.makeEmptyPathFormulaWithContext(pSSAMap, pPts), initFormula);
   }
 
   /**
@@ -442,11 +437,11 @@ public class SlicingAbstractionsUtils {
    * @param pRoot The (abstraction) state to start at
    * @param pPath the path consisting of a list of (abstraction) states
    * @param includePartialInvariants whether to include the abstraction formulas of the first and
-   *        last ARGState (with the right SSA indices)
+   *     last ARGState (with the right SSA indices)
    * @return generated list of PathFormulas
    * @throws CPATransferException building the {@link PathFormula} from {@link CFAEdge}s failed
    * @throws InterruptedException building the {@link PathFormula} from {@link CFAEdge}s got
-   *         interrupted
+   *     interrupted
    */
   public static List<PathFormula> getFormulasForPath(
       PathFormulaManager pfmgr,
@@ -514,15 +509,16 @@ public class SlicingAbstractionsUtils {
   }
 
   /**
-   * Copy the effective edges of a (abstraction) state over to a new (abstraction) state.
-   * This means that we make a copy of the non-abstraction states
-   * that lie between originalState and each abstraction state
-   * that is connected to originalState via non-abstraction states.
+   * Copy the effective edges of a (abstraction) state over to a new (abstraction) state. This means
+   * that we make a copy of the non-abstraction states that lie between originalState and each
+   * abstraction state that is connected to originalState via non-abstraction states.
+   *
    * @param forkedState state at which the new edges should start/ end
    * @param originalState state at which the original edges start/ end
    * @param pReached the reached-set that will track the added states
    */
-  public static void copyEdges(ARGState forkedState, ARGState originalState, ARGReachedSet pReached) {
+  public static void copyEdges(
+      ARGState forkedState, ARGState originalState, ARGReachedSet pReached) {
 
     final Map<ARGState, PersistentList<ARGState>> outgoingSegmentMap =
         calculateOutgoingSegments(originalState);
@@ -536,7 +532,8 @@ public class SlicingAbstractionsUtils {
       copyEdge(intermediateStateList, originalState, endState, forkedState, endState, pReached);
       // if we have a self-loop, we have to make a self-loop from forkedState->forkedState:
       if (endState.equals(originalState)) {
-        copyEdge(intermediateStateList, originalState, endState,forkedState,forkedState, pReached);
+        copyEdge(
+            intermediateStateList, originalState, endState, forkedState, forkedState, pReached);
       }
     }
 
@@ -548,8 +545,13 @@ public class SlicingAbstractionsUtils {
     }
   }
 
-  private static void copyEdge(List<ARGState> pSegmentStates, ARGState oldStartState,
-      ARGState oldEndState, ARGState newStartState, ARGState newEndState, ARGReachedSet pReached) {
+  private static void copyEdge(
+      List<ARGState> pSegmentStates,
+      ARGState oldStartState,
+      ARGState oldEndState,
+      ARGState newStartState,
+      ARGState newEndState,
+      ARGReachedSet pReached) {
 
     // we need to treat the case where we have no intermediate non-abstraction states differently:
     if (oldEndState.getParents().contains(oldStartState)) {
@@ -598,10 +600,11 @@ public class SlicingAbstractionsUtils {
     addForkedStatesToReachedSet(newSegmentStates, pSegmentStates, pReached);
   }
 
-  private static void addForkedStatesToReachedSet(List<ARGState> newStates, List<ARGState> originalStates, ARGReachedSet pReached) {
-    checkArgument(newStates.size()==originalStates.size());
-    for (int i = 0; i< newStates.size(); i++) {
-      pReached.addForkedState(newStates.get(i),originalStates.get(i));
+  private static void addForkedStatesToReachedSet(
+      List<ARGState> newStates, List<ARGState> originalStates, ARGReachedSet pReached) {
+    checkArgument(newStates.size() == originalStates.size());
+    for (int i = 0; i < newStates.size(); i++) {
+      pReached.addForkedState(newStates.get(i), originalStates.get(i));
     }
   }
 
@@ -616,34 +619,36 @@ public class SlicingAbstractionsUtils {
   }
 
   /**
-   * Check that there is no path through the ARG anymore that has the same sequence of abstraction states as the error path.
-   * This is a mathematically proven progress property that should hold after splitting and slicing.
-   * This method makes no restrictions on the shape of the ARG, so one abstraction state could have several abstraction state
-   * parents. For analysis where this is not the case there are more efficient ways to check this.
+   * Check that there is no path through the ARG anymore that has the same sequence of abstraction
+   * states as the error path. This is a mathematically proven progress property that should hold
+   * after splitting and slicing. This method makes no restrictions on the shape of the ARG, so one
+   * abstraction state could have several abstraction state parents. For analysis where this is not
+   * the case there are more efficient ways to check this.
    */
   public static boolean checkProgress(UnmodifiableReachedSet pReached, ARGPath pErrorPath) {
     Set<ARGState> rootStates = ARGUtils.getRootStates(pReached);
-    assert rootStates.size()==1;
+    assert rootStates.size() == 1;
     ARGState root = rootStates.iterator().next();
-    final List<ARGState> abstractionStatesTrace = PredicateCPARefiner.filterAbstractionStates(pErrorPath);
-    assert abstractionStatesTrace.get(0).getStateId()!=0;
-    for (int i = -1 ; i < abstractionStatesTrace.size()-1; i++) {
-       ARGState first = (i==-1) ? root : abstractionStatesTrace.get(i);
-       ARGState second = abstractionStatesTrace.get(i+1);
+    final List<ARGState> abstractionStatesTrace =
+        PredicateCPARefiner.filterAbstractionStates(pErrorPath);
+    assert abstractionStatesTrace.get(0).getStateId() != 0;
+    for (int i = -1; i < abstractionStatesTrace.size() - 1; i++) {
+      ARGState first = (i == -1) ? root : abstractionStatesTrace.get(i);
+      ARGState second = abstractionStatesTrace.get(i + 1);
       if (!SlicingAbstractionsUtils.calculateOutgoingSegments(first).containsKey(second)) {
-         return true;
-       }
+        return true;
+      }
     }
     return false;
   }
 
   /**
-   * Calculates all states on the error path to the given error state.
-   * This method is a replacement of {@link ARGUtils#getAllStatesOnPathsTo(ARGState)}
-   * for cases where the abstraction states in the ARG do not form a tree.
+   * Calculates all states on the error path to the given error state. This method is a replacement
+   * of {@link ARGUtils#getAllStatesOnPathsTo(ARGState)} for cases where the abstraction states in
+   * the ARG do not form a tree.
    *
-   * @param errorState The state at which the error path ends.
-   *                   Should ideally contain counterexample information
+   * @param errorState The state at which the error path ends. Should ideally contain counterexample
+   *     information
    * @return A set of all states on the path to errorState
    */
   public static Set<ARGState> getStatesOnErrorPath(ARGState errorState) {
@@ -657,19 +662,14 @@ public class SlicingAbstractionsUtils {
       path = ARGUtils.getOnePathTo(errorState);
     }
 
-    final List<ARGState> abstractionStatesOnErrorPath;
-    abstractionStatesOnErrorPath =
-        path.asStatesList()
-            .asList()
-            .stream()
-            .filter(x -> isAbstractionState(x))
-            .collect(Collectors.toList());
+    final ImmutableList<ARGState> abstractionStatesOnErrorPath =
+        from(path.asStatesList()).filter(x -> isAbstractionState(x)).toList();
 
     final Set<ARGState> statesOnErrorPath = new HashSet<>(abstractionStatesOnErrorPath);
 
-    for (int i = 0; i< abstractionStatesOnErrorPath.size()-1;i++) {
+    for (int i = 0; i < abstractionStatesOnErrorPath.size() - 1; i++) {
       ARGState start = abstractionStatesOnErrorPath.get(i);
-      ARGState stop = abstractionStatesOnErrorPath.get(i+1);
+      ARGState stop = abstractionStatesOnErrorPath.get(i + 1);
       statesOnErrorPath.addAll(SlicingAbstractionsUtils.calculateOutgoingSegments(start).get(stop));
     }
 
@@ -705,7 +705,7 @@ public class SlicingAbstractionsUtils {
     for (ARGState parent : state.getParents()) {
       EdgeSet edgeSet = ((SLARGState) parent).getEdgeSetToChild(state);
       if (edgeSet != null) {
-        for (Iterator<CFAEdge> it = edgeSet.iterator();it.hasNext(); ) {
+        for (Iterator<CFAEdge> it = edgeSet.iterator(); it.hasNext(); ) {
           CFAEdge edge = it.next();
           if (!locations.contains(edge.getSuccessor())) {
             it.remove();
@@ -767,17 +767,13 @@ public class SlicingAbstractionsUtils {
     }
     if (pState instanceof SLARGState) {
       // if not all EdgeSets from parents to pState are singletons, return true:
-      if (!pState
-          .getParents()
-          .stream()
+      if (!pState.getParents().stream()
           .map(parent -> ((SLARGState) parent).getEdgeSetToChild(pState))
           .allMatch(x -> x.size() == 1)) {
         return true;
       }
       // if not all EdgeSets from pState to children are singletons, return true:
-      if (!pState
-          .getChildren()
-          .stream()
+      if (!pState.getChildren().stream()
           .map(child -> ((SLARGState) pState).getEdgeSetToChild(child))
           .allMatch(x -> x.size() == 1)) {
         return true;
@@ -794,8 +790,7 @@ public class SlicingAbstractionsUtils {
     boolean changed = false;
     for (AbstractState state : new ArrayList<>(pArgReachedSet.asReachedSet().asCollection())) {
       ARGState currentState = (ARGState) state;
-      PredicateAbstractState predState =
-          PredicateAbstractState.getPredicateState(currentState);
+      PredicateAbstractState predState = PredicateAbstractState.getPredicateState(currentState);
       assert predState != null;
       if (predState.isAbstractionState() && !blk(currentState)) {
         changed = true;
@@ -826,5 +821,4 @@ public class SlicingAbstractionsUtils {
     }
     return changed;
   }
-
 }
