@@ -12,7 +12,6 @@ import java.io.IOException;
 import java.io.Writer;
 import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayDeque;
 import java.util.Collection;
 import java.util.Deque;
@@ -41,7 +40,7 @@ public class AssumptionAutomatonGenerator {
 
   @Option(secure = true, name = "file", description = "write collected assumptions to file")
   @FileOption(FileOption.Type.OUTPUT_FILE)
-  private Path assumptionsFile = Paths.get("AssumptionAutomaton.txt");
+  private Path assumptionsFile = Path.of("AssumptionAutomaton.txt");
 
   public AssumptionAutomatonGenerator(final Configuration config, final LogManager pLogger)
       throws InvalidConfigurationException {
@@ -71,26 +70,33 @@ public class AssumptionAutomatonGenerator {
     return uncoveredAncestors;
   }
 
-  public void writeAutomaton(final ARGState root, final List<ARGState> incompleteNodes) throws CPAException {
-    assert(notCovered(incompleteNodes));
+  public void writeAutomaton(final ARGState root, final List<ARGState> incompleteNodes)
+      throws CPAException {
+    assert notCovered(incompleteNodes);
 
     try (Writer w = IO.openOutputFile(assumptionsFile, Charset.defaultCharset())) {
       logger.log(Level.FINEST, "Write assumption automaton to file ", assumptionsFile);
-      AssumptionCollectorAlgorithm.writeAutomaton(w, root, getAllAncestorsFor(incompleteNodes),
-          new HashSet<AbstractState>(incompleteNodes), 0, true);
+      AssumptionCollectorAlgorithm.writeAutomaton(
+          w,
+          root,
+          getAllAncestorsFor(incompleteNodes),
+          new HashSet<AbstractState>(incompleteNodes),
+          0,
+          true,
+          false);
     } catch (IOException e) {
-      logger.log(Level.SEVERE, "Could not write assumption automaton for next partial ARG checking");
+      logger.log(
+          Level.SEVERE, "Could not write assumption automaton for next partial ARG checking");
       throw new CPAException("Assumption automaton writing failed", e);
     }
   }
 
-  private boolean notCovered(final List<ARGState> nodes){
-    for(ARGState state: nodes) {
-      if(state.isCovered()){
+  private boolean notCovered(final List<ARGState> nodes) {
+    for (ARGState state : nodes) {
+      if (state.isCovered()) {
         return false;
       }
     }
     return true;
   }
-
 }
