@@ -21,7 +21,6 @@ import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayDeque;
 import java.util.Deque;
 import java.util.HashSet;
@@ -50,48 +49,47 @@ import org.w3c.dom.Document;
 @Options(prefix = "pixelgraphic.export")
 public abstract class GraphToPixelsWriter<Node> {
 
-  @Option(secure=true, description="Padding of the bitmap on the left and right (each) in pixels")
+  @Option(
+      secure = true,
+      description = "Padding of the bitmap on the left and right (each) in pixels")
   private int xPadding = 2;
 
-  @Option(secure=true, description="Padding of the bitmap on the top and bottom (each) in pixels")
+  @Option(
+      secure = true,
+      description = "Padding of the bitmap on the top and bottom (each) in pixels")
   private int yPadding = 2;
 
   @Option(
-    secure = true,
-    description =
-        "Width of the bitmap in pixels. If set to -1, width is computed"
-            + " in relation to the height. If both are set to -1, the optimal bitmap size"
-            + " to represent the graph is used. The final width is width*scaling"
-  )
+      secure = true,
+      description =
+          "Width of the bitmap in pixels. If set to -1, width is computed"
+              + " in relation to the height. If both are set to -1, the optimal bitmap size"
+              + " to represent the graph is used. The final width is width*scaling")
   private int width = -1;
 
   @Option(
-    secure = true,
-    description =
-        "Height of the bitmap in pixels. If set to -1, height is "
-            + " computed in relation to the width. If both are set to -1, the optimal bitmap size"
-            + " to represent the graph is used. The final height is height*scaling"
-  )
+      secure = true,
+      description =
+          "Height of the bitmap in pixels. If set to -1, height is "
+              + " computed in relation to the width. If both are set to -1, the optimal bitmap size"
+              + " to represent the graph is used. The final height is height*scaling")
   private int height = -1;
 
   @Option(
-    secure = true,
-    description =
-        "Scaling of the bitmap. If set to 1, 1 pixel represents one "
-            + "graph node. If set to 2, 2 * 2 pixels represent one graph node, and so on."
-  )
+      secure = true,
+      description =
+          "Scaling of the bitmap. If set to 1, 1 pixel represents one "
+              + "graph node. If set to 2, 2 * 2 pixels represent one graph node, and so on.")
   private int scaling = 2;
 
   @Option(secure = true, description = "Format to use for image output", name = "format")
   private String imageFormat = "svg";
 
   @Option(
-    secure = true,
-    description =
-        "Highlight not only corresponding graph nodes, but background of"
-            + " corresponding line, too. This may give an better overview, but also introduces more"
-            + " clutter"
-  )
+      secure = true,
+      description =
+          "Highlight not only corresponding graph nodes, but background of corresponding line, too."
+              + " This may give an better overview, but also introduces more clutter")
   private boolean strongHighlight = true;
 
   public static final Color COLOR_BACKGROUND = Color.LIGHT_GRAY;
@@ -251,11 +249,9 @@ public abstract class GraphToPixelsWriter<Node> {
     Graphics2D g = canvasHandler.createCanvas(finalWidth, finalHeight);
     drawContent(g, finalWidth, finalHeight, structure);
 
-    Path fullOutputFile = Paths.get(pOutputFile + "." + imageFormat);
+    Path fullOutputFile = Path.of(pOutputFile + "." + imageFormat);
     canvasHandler.writeToFile(fullOutputFile);
   }
-
-
 
   private interface CanvasProvider {
     Graphics2D createCanvas(int pWidth, int pHeight);
@@ -274,8 +270,9 @@ public abstract class GraphToPixelsWriter<Node> {
 
     @Override
     public Graphics2D createCanvas(int pWidth, int pHeight) {
-      checkState(bufferedImage == null, "createCanvas can only be called after writing the old "
-          + "canvas to a file");
+      checkState(
+          bufferedImage == null,
+          "createCanvas can only be called after writing the old " + "canvas to a file");
       bufferedImage = new BufferedImage(pWidth, pHeight, BufferedImage.TYPE_3BYTE_BGR);
       return bufferedImage.createGraphics();
     }
@@ -286,7 +283,8 @@ public abstract class GraphToPixelsWriter<Node> {
       try (FileImageOutputStream out = new FileImageOutputStream(pOutputFile.toFile())) {
         boolean success = ImageIO.write(bufferedImage, imageFormat, out);
         if (!success) {
-          throw new InvalidConfigurationException("ImageIO can't handle given format: " + imageFormat);
+          throw new InvalidConfigurationException(
+              "ImageIO can't handle given format: " + imageFormat);
         }
       }
       bufferedImage = null;
@@ -322,6 +320,4 @@ public abstract class GraphToPixelsWriter<Node> {
       }
     }
   }
-
 }
-
